@@ -1,5 +1,6 @@
-Not yet released (Build 2233)
+Not yet released (Build 2284)
 
+- adapted a few SPARQLParser tests with non-absolute IRI expansions; are now called with "postCheck=False" to avoid irrelevant assertion failures
 - Moved prefix checking in module sparqlparser from method _checkIriExpansion() to _applyPrefixesAndBase()
 - Fixed a problem with base IRI processing (SPARQLParser). In the process:
 	- removed parameter "isdefaultbase" from _applyPrefixesAndBase()
